SIL: Fix SILType substitution bug with DynamicSelfType vs MetatypeType

Previously, SIL type lowering would assume a MetatypeType was
completely lowered if it had a representation, but this is not
quite right; after substitution, we can have a MetatypeType
whose instance type is a DynamicSelfType. Strip these away more
eagerly, since they show up in SILType::subst(), where we first
substitute AST-level generic parameters, and then lower the
result to get the final SIL type.

Fixes <https://bugs.swift.org/browse/SR-2733>.